[gd_scene load_steps=4 format=3 uid="uid://dj0i3ilb0em5e"]

[ext_resource type="Script" uid="uid://c8b7cr0qpv2og" path="res://scripts/level_manager.gd" id="1_t2qv6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1uylh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h37sy"]
bg_color = Color(0.385493, 0.385492, 0.385492, 1)

[node name="LevelCompleteMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_t2qv6")

[node name="LevelSuceeded" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LevelSuceeded"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03, 0.03, 0.03, 0.690196)

[node name="Title" type="Label" parent="LevelSuceeded"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -291.0
offset_top = 20.0
offset_right = 291.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Targets Eliminated!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSuceeded"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -141.5
offset_right = 196.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("Next Level")
theme_override_constants/separation = 10
alignment = 1

[node name="Next Level" type="Button" parent="LevelSuceeded/VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h37sy")
text = "Next Level"

[node name="Main Menu" type="Button" parent="LevelSuceeded/VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h37sy")
text = "Main Menu"

[node name="Quit" type="Button" parent="LevelSuceeded/VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h37sy")
text = "Quit"

[node name="LevelFailed" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LevelFailed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03, 0.03, 0.03, 0.690196)

[node name="Title" type="Label" parent="LevelFailed"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -291.0
offset_top = 20.0
offset_right = 291.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Ummm You Missed a few..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LevelFailed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -141.5
offset_right = 196.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("Retry")
theme_override_constants/separation = 10
alignment = 1

[node name="Retry" type="Button" parent="LevelFailed/VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h37sy")
text = "Retry"

[node name="Main Menu" type="Button" parent="LevelFailed/VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h37sy")
text = "Main Menu"

[node name="Quit" type="Button" parent="LevelFailed/VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uylh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h37sy")
text = "Quit"

[connection signal="button_down" from="LevelSuceeded/VBoxContainer/Next Level" to="." method="_on_next_level_button_down"]
[connection signal="button_down" from="LevelSuceeded/VBoxContainer/Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="LevelSuceeded/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="LevelFailed/VBoxContainer/Retry" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="LevelFailed/VBoxContainer/Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="LevelFailed/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
